# FinalProject

./: README.md  pattern.py  pyproject.toml
data/: knit_data.csv  size_chart.csv
src/: dashboard.py  pattern.py
