[project]
name = "knitting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.2",
    "flask>=3.0.3",
    "fpdf>=1.7.2",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pillow>=11.2.1",
    "plotly>=6.0.1",
]
